namespace Logic.Interfaces
{
    public interface IEntity
    {
        public Guid Id { get; }
    }
}
