namespace SQL_Query_Builder.Interfaces
{
    public interface IEnumToStringConverter
    {
        public string Convert(Enum @enum);
    }
}
